testsuite/tests/polykinds/T9222.stderr

T9222.hs:14:3: error:
    • Couldn't match type ‘c0’ with ‘c’
        ‘c0’ is untouchable
          inside the constraints: a ~ '(b0, c0)
          bound by a type expected by the context:
                     (a ~ '(b0, c0)) => Proxy b0
          at T9222.hs:14:3-43
      ‘c’ is a rigid type variable bound by
        the type of the constructor ‘Want’:
          forall {k1} {j1} (a :: (k1, j1)) (b :: k1) (c :: j1).
          ((a ~ '(b, c)) => Proxy b) -> Want a
        at T9222.hs:14:3-43
    • In the ambiguity check for ‘Want’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the definition of data constructor ‘Want’
      In the data type declaration for ‘Want’
